# swiggy-analyzer

./: .gitignore  README.md  env.example  main.py  pyproject.toml  requirements.txt
src/: config.py  dashboard.py  data_pipeline.py  email_text_parser.py  gmail_client.py
